--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <td>AWS</td>
             </tr>
         </table>
-        <h6><i>Portfolio</i></h6>
+        <h6><i>Portfolio/Projects</i></h6>
             <ul>
                 <li><b>Movie Database API - Python Flask project</b>
                     <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
@@ -82,8 +82,11 @@
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
                 <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
                     <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Doe Web Scraper API - Node JS Project </b></li>
+                <li><b>Doe Web Scraper API - Node JS Project. Hosted through AWS. CI Pipeline and Dockererized through Gitlab. </b></li>
                     <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. WIP. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>Dragon Fight! - C# Console Application </b></li>
+                    <p>A console/text based RPG for C# development practice as well as a prototype for future Unit development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
             </ul>
     </body>
 </html>
