--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                     <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Dragon Fight! - C# Console Application </b></li>
                     <p>A console/text based RPG for C# development practice as well as a prototype for future Unit development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application </b></li>
+                    <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/Fire-Emblem-Engage-Character-Class-Randomizer" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
+
             </ul>
     </body>
 </html>
