--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                     <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Doe Web Scraper API - Node JS Project.  CI Pipeline and Dockererized through Gitlab. </b></li>
                     <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>Two Player Tic Tac Toe - C# WinForms Application </b></li>
+                    <p>Two player tic tac toe built in WinForms <a href= "https://github.com/nategoodman88/TwoPlayerTicTacToe" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Dragon Fight! - C# Console Application </b></li>
                     <p>A console/text based RPG for C# development practice as well as a prototype for future Unit development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application </b></li>
