--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li><b>Gorbo Studios Website</b></li>
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
                 <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
-                    <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                    <p>A To Do List app created with Quasar framework. Partially implemented backend with Directus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Doe Web Scraper API - Node JS Project. </b></li>
                     <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports.   CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Two Player Tic Tac Toe - C# WinForms Application </b></li>
